--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
   "name": "sesmo-bot",
   "version": "1.0.0",
-  "description": "An advanced WhatsApp bot",
+  "description": "An advanced WhatsApp bot using Baileys and OpenAI",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node index.js"
   },
-  "keywords": [
-    "whatsapp",
-    "bot",
-    "advanced",
-    "baileys"
-  ],
-  "author": "Your Name or GitHub Username",
-  "license": "ISC",
+  "keywords": ["whatsapp", "bot", "baileys", "openai", "gpt"],
+  "author": "Sesmo2",
+  "license": "MIT",
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.6.0"
-    // You might add other dependencies here later
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-    // Optional: For development, auto-restarts the bot on code changes
+    "@hapi/boom": "^11.1.4",
+    "@whiskeysockets/baileys": "^6.7.0",
+    "openai": "^4.27.0",
+    "pino": "^8.0.0"
   }
 }
