--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
-{
-  "name": "sesmo-bot",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.0",
-    "express": "^4.18.2",
-    "qrcode": "^1.5.1",
-    "pino": "^8.0.0"
-  }
+"scripts": {
+  "start": "node index.js"
+},
+"dependencies": {
+  "@whiskeysockets/baileys": "^6.6.0",
+  "@hapi/boom": "^10.0.1",
+  "express": "^4.18.2",
+  "pino": "^8.0.0",
+  "socket.io": "^4.7.2",
+  "uuid": "^9.0.0",
+  "dotenv": "^16.3.1"
 }
